# osmium-os

./: .config  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  aarch64-config.sh  aarch64-kernel.gdb  bootloader.code-workspace  build-aarch64.sh  build-initial-ramdisk.sh  build-initramfs.sh  build-x86_64.sh  build.rs  build.sh  clean.sh  common.code-workspace  gdb-aarch64-qemu.sh  gdb-x86_64-qemu.sh  kernel.code-workspace  osmium.code-workspace  qemu-aarch64.sh  qemu-x86_64.sh  qemu.gdb  raspberry-pi-disk.sh  strip-assembler-directives.sh  user.code-workspace  x86_64-config.sh  x86_64-kernel.gdb
bootloader/: Cargo.toml  build.sh  rust-toolchain.toml
bootloader/src/: beryllium.rs  config.rs  elf.rs  main.rs  paging.rs  registers.rs  toml.rs
bootloader/src/aarch64/: mod.rs  paging.rs  registers.rs  transition.rs
kernel/: Cargo.toml  build.sh  disassemble.sh  qemu.gdb
kernel/.cargo/: config.toml
kernel/asm-code/: Makefile
kernel/asm-code/x86_64/: startup.S
kernel/src/: acpi.rs  console.rs  elf.rs  font.rs  font_renderer.rs  heap.rs  initial_ramdisk.rs  initramfs.rs  lazy_init.rs  main.rs  memory.rs  mmio.rs  paging.rs  physical_memory_manager.rs  pmm.rs  syscall.rs  user_memory.rs
kernel/src/aarch64/: asm.rs  beryllium.rs  exceptions.rs  exceptions.s  gicv2.rs  linker.ld  mod.rs  registers.rs
kernel/src/acpi/: fadt.rs  madt.rs
kernel/src/test/: initial_ramdisk.tar
kernel/src/x86_64/: asm.rs  hpet.rs  interrupts.rs  linker.ld  local_apic.rs  mod.rs  multiboot.rs  syscall.rs  task_state_segment.rs
kernel/syscall-interface/: Cargo.toml
kernel/targets/: aarch64.json  x86_64.json
src/: assert.rs  (+10 more)
(+58 files in other folders)
