[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.19.0", features = ["alloc", "global_allocator", "panic-on-logger-errors", "logger"] }
uefi-services = { version = "0.16.0", default-features = false }
