[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.1"
uefi = { version="0.24.0", features = ["alloc", "global_allocator", "panic-on-logger-errors", "logger"] }
uefi-services = "0.21.0"
common = { path = "../common" }
