[package]
name = "osmium"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort" # Covered by the target JSON
debug = true

[profile.release]
panic = "abort" # Covered by the target JSON
debug = true

[dependencies]
common = { path = "../common" }