[package]
name = "osmium"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

[dependencies]
bitflags = "2.4.0"
common = { path = "../common" }
syscall-interface = { path = "./syscall-interface" }
